--- a/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
@@ -5,6 +5,14 @@ dependencies:
   config:
     - field.field.tournament_api.tournament_api.field_banner_image
     - field.field.tournament_api.tournament_api.field_banner_image_landscape
+    - field.field.tournament_api.tournament_api.field_lightbox_games_title
+    - field.field.tournament_api.tournament_api.field_lightbox_intro
+    - field.field.tournament_api.tournament_api.field_lightbox_join_button
+    - field.field.tournament_api.tournament_api.field_lightbox_mechanics
+    - field.field.tournament_api.tournament_api.field_lightbox_mechanics_title
+    - field.field.tournament_api.tournament_api.field_lightbox_rewards
+    - field.field.tournament_api.tournament_api.field_lightbox_rewards_title
+    - field.field.tournament_api.tournament_api.field_lightbox_status
     - field.field.tournament_api.tournament_api.field_platform
     - field.field.tournament_api.tournament_api.field_status
     - field.field.tournament_api.tournament_api.field_status_board
@@ -16,6 +24,7 @@ dependencies:
     - datetime
     - options
     - svg_image
+    - text
     - tournament_api
     - user
 id: tournament_api.tournament_api.default
@@ -48,6 +57,69 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_lightbox_games_title:
+    weight: 15
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_lightbox_intro:
+    weight: 11
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
+  field_lightbox_join_button:
+    weight: 14
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_lightbox_mechanics:
+    weight: 12
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_lightbox_mechanics_title:
+    weight: 17
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_lightbox_rewards:
+    weight: 13
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_lightbox_rewards_title:
+    weight: 16
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_lightbox_status:
+    weight: 18
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_platform:
     weight: 6
