--- a/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.promo_banner_game_launch.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.promo_banner_game_launch.default.yml
@@ -102,4 +102,6 @@ content:
     third_party_settings: {  }
     type: boolean
     region: content
-hidden: {  }
+hidden:
+  field_field_table_id: true
+  field_table_id: true
