--- a/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.tournament_api.tournament_api.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.tournament_api.tournament_api.field_banner_id
     - field.field.tournament_api.tournament_api.field_banner_image
     - field.field.tournament_api.tournament_api.field_banner_image_landscape
     - field.field.tournament_api.tournament_api.field_lightbox_games_title
@@ -32,6 +33,14 @@ targetEntityType: tournament_api
 bundle: tournament_api
 mode: default
 content:
+  field_banner_id:
+    weight: 19
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_banner_image:
     weight: 3
     label: above
