Resolve WEBSITE-705 "Tournament countdown timer"

--- a/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_banner_id.yml
+++ b/web/sites/ptplus/config/sync/field.field.tournament_api.tournament_api.field_banner_id.yml
@@ -11,7 +11,7 @@ field_name: field_banner_id
 entity_type: tournament_api
 bundle: tournament_api
 label: 'Banner ID'
-description: ''
+description: 'The Tournament ID field to match the banner from the API'
 required: true
 translatable: false
 default_value: {  }
